Fixed spotlight double border

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -76,6 +76,10 @@ body {
   border: 1px solid #9e9e9e;
 }
 
+.spotlights .box:nth-of-type(1) {
+  border-bottom: none;
+}
+
 .inner-grid {
   display: grid;
   grid-template-columns: 1fr;
