--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -65,4 +65,13 @@
     display: block;
     grid-column: 1 / 3;
   }
+
+  .spotlights .box:nth-of-type(1),
+  .spotlights .box:nth-of-type(2) {
+    border-bottom: none;
+  }
+
+  .spotlights .box:nth-of-type(1) {
+    border-right: 1px solid #9e9e9e;
+  }
 }
