--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -50,6 +50,11 @@
     grid-column: 2 / 3;
   }
 
+  .spotlights .box:nth-of-type(1) {
+    border-right: none;
+    border-bottom: 1px solid #9e9e9e;
+  }
+
   .chamber-address {
     flex-direction: row;
     text-align: left;
